# atomify

./: .cursorignore  .gitignore  .prettierignore  CHANGELOG.md  EMBEDDING.md  FILES_REPORT.md  LAMMPS_UPDATE_REPORT.md  Makefile  README.md  SIMULATION_EDIT_STORAGE.md  asset-manifest.json  biome.json  craco.config.js  index.html  jupyter-lite.json  lammps.wasm.map  merge-dependabot.sh  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pr_description.md  pr_vite_migration.md  precache-manifest.2381ac70d481b9618171054fedaeeec4.js  precache-manifest.4acc1f02f457cb0c033d5639b1f9b80a.js  precache-manifest.4c85c84612d1e5e43b5a73724b70634d.js  precache-manifest.527021c3fed521dd966a69e6fa03fd35.js  precache-manifest.58ce187c99c53eab029b4afc6726601e.js  precache-manifest.59c3038d8af6faf12963c7bd49f98851.js  precache-manifest.69860d711cb20c65bf46cade8091a1d0.js  precache-manifest.b4831a68f21c3a917009dc0795ebaaac.js  precache-manifest.c22476d736d599fc4448f3756836f9e1.js  service-worker.js  tsconfig.json  vite.config.ts  vitest.config.mts  vitest.config.ts
.claude/: settings.local.json
.devcontainer/: devcontainer.json  post-create.sh
.gemini/: config.yaml
.github/: FUNDING.yml  dependabot.yml
backend/: .dockerignore  .env  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  pyproject.toml  ty.toml
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 20251222_0758_4dff5a4d3ed9_initial_schema.py  20251222_1017_2da813b175f0_initial_test_schema.py
backend/src/atomify_api/: __init__.py  config.py  main.py
backend/src/atomify_api/auth/: __init__.py  firebase.py  middleware.py
backend/src/atomify_api/db/: __init__.py  database.py  models.py
backend/src/atomify_api/routers/: __init__.py  health.py  test.py
backend/src/atomify_api/storage/: __init__.py  gcs.py
backend/tests/: __init__.py  test_health.py
cpp/: KOKKOS_DEPLOYMENT.md  Makefile  atomify.cpp  build.py  build.py.new  build.sh  build_kokkos_clean.py  execinfo.h  execinfo_stub.h  fix_atomify.cpp  fix_atomify.h  lammps.patch  lammpsweb.cpp  (+3 more)
(+550 files in other folders)
