[project]
name = "atomify-api"
version = "0.1.0"
description = "Atomify Backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.127.0",
    "uvicorn[standard]==0.40.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "sqlmodel==0.0.27",
    "aiosqlite==0.22.0",
    "greenlet==3.3.0",
    "alembic==1.17.2",
    "firebase-admin==7.1.0",
    "gcloud-aio-storage==9.6.1",
    "google-cloud-storage==3.7.0",
    "httpx==0.28.1",
    "python-multipart==0.0.21",
]

[project.optional-dependencies]
dev = [
    "ty==0.0.5",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "ruff==0.14.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atomify_api"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
